2007-02-05  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Bump to VERSION 0.230, support latest stable
	release in 0.2.

	(import): Support ':init' as well as '-init' and 'init'
	argument to initialise Clutter when importing the module.

	(square): Add pure-Perl square waveform generator function.

	(pod:SYNOPSIS): Update the example code.

	* xs/ClutterTypes.xs: Make Clutter::Color->parse() a
	valid class method; add support for accessing the members
	of Clutter::Knot.

	* xs/ClutterGroup.xs: Extend the stack beforehand with the
	size of the list returned by clutter_group_get_children(),
	instead of using XPUSHs; bind clutter_group_remove_all().

	* xs/ClutterActor.xs: Allow overriding the
	ClutterActor::request_coords() and ClutterActor::allocate_coords()
	vfuncs from Perl, and document how to do it.

	* examples/behaviour.pl: Test ':init' as initialisation
	pragma.

	* examples/hello.pl: Add a simple hello world using the
	same code of the SYNOPSIS.

	* examples/*.pl: Add copyright and license terms for the
	code in the examples.

2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Depend on clutter-0.2.

	* README: Add informations on Clutter and installation
	instructions.

	* xs/ClutterActor.xs:
	* xs/ClutterBehaviour.xs:
	* xs/ClutterLabel.xs:
	* xs/ClutterTypes.xs: Add last bits of new upstream API.

	* xs/ClutterGroup.xs: Remove deprecated clutter_group_show_all()
	and clutter_group_hide_all().

2006-12-19  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterTypes.xs: Wrap lighen, darken and shade
	ClutterColor methods.

2006-12-19  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterAlpha.xs: Allow undef data by default in
	Clutter::Alpha::set_func().

	* xs/ClutterTypes.xs: Wrap the pixel packing functions;
	wrap the HLS colospace conversion functions; fix the equal
	functions.

	* Clutter.pm: Fix examples in SYNOPSIS.

	* examples/behaviour.pl: Fix default value for the angle-end